# sysguardd

./: .dockerignore  .gitignore  404.html  CMakeLists.txt  Dockerfile  README.md  SECURITY.md  index.html  mkdocs.yml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-monthly.yml  docs.yml  helm-oci-push.yml
ARCHITECTURE/: index.html
CLI/: index.html
COMPONENTS/: index.html
EVENT_INJECTION_TESTING/: index.html
HELM_DISTRIBUTION/: index.html
HELM_PUBLISHING_SETUP/: index.html
HELM_QUICK_REFERENCE/: index.html
INSTALL-TEST/: index.html
KUBERNETES/: index.html
MAINTAINERS/: index.html
OPERATIONS/: index.html
ROADMAP/: index.html
USER_GUIDE/: index.html
docs/: ARCHITECTURE.md  CLI.md  COMPONENTS.md  EVENT_INJECTION_TESTING.md  HELM_DISTRIBUTION.md  HELM_PUBLISHING_SETUP.md  HELM_QUICK_REFERENCE.md  INSTALL-TEST.md  KUBERNETES.md  MAINTAINERS.md  OPERATIONS.md  ROADMAP.md  USER_GUIDE.md  index.md
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  daemonset.yaml  rbac.yaml
k8s/: configmap.yaml  daemonset.yaml  kustomization.yaml  rbac.yaml
policies/: default.json  default.policy
scripts/: bootstrap.sh  install-deps.sh  install-service.sh  install.sh  nondev-setup.sh  status.sh  test-enforce-mode.sh  test-event-injection.sh
search/: search_index.json
src/: alert_dispatcher.cpp  audit_logger.cpp  cli.cpp  config.cpp  main.cpp  mitigator.cpp  policy_engine.cpp  service.cpp
systemd/: sysguardd.service
tests/: test_alert_dispatcher.cpp  test_config_dotenv.cpp  test_policy.cpp
(+8 files in other folders)
